# pygame-rts-prototype

./: README.md  pyproject.toml
assets/sprites/: metadata.json
src/: building.py  camera.py  constants.py  footman.py  main.py  search.c  search.cp310-win_amd64.pyd  search.pyx  setup.py  state_manager.py  tileset.py  types_.py  unit.py  unit_factory.py
