[tool.poetry]
name = "pygame-rts-prototype"
version = "0.1.0"
description = ""
authors = ["Michael"]
readme = "README.md"
packages = [{include = "pygame_rts_prototype"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.3.0"
transitions = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"